[Views] Fix Omnibox Search Icon Middle Mouse Pasting

The location icon was disabled when the omnibox is
empty or emptying. This was to prevent the search
icon from being highlighted when the user hovers
over it. However, this disables middle mouse pasting.

To fix this issue, instead of enabling/disabling the
the location icon, the ink drop mode will be turned
on/off.

Bug: 733886
Change-Id: Iefc1d0d41dec25634e4eef5785ef2115a5c5496f